Feedback bug fixes (#79)
* Fixed feedback tab not showing in test

* built character count into text input

* Added ios zoom fix to location auto

* Fixed local storage item being set on email error

--- a/src/forms/EditListingBioForm/EditListingBioForm.module.css
+++ b/src/forms/EditListingBioForm/EditListingBioForm.module.css
@@ -62,7 +62,3 @@
     width: 15rem;
   }
 }
-
-.characterCount {
-  composes: marketplaceTinyFontStyles from global;
-}
