--- a/src/forms/EditListingCareRecipientDetailsForm/EditListingCareRecipientDetailsForm.module.css
+++ b/src/forms/EditListingCareRecipientDetailsForm/EditListingCareRecipientDetailsForm.module.css
@@ -67,7 +67,3 @@
     /* margin-top: 100px; */
   }
 }
-
-.characterCount {
-  composes: marketplaceTinyFontStyles from global;
-}
