--- a/src/forms/EditListingJobDescriptionForm/EditListingJobDescriptionForm.module.css
+++ b/src/forms/EditListingJobDescriptionForm/EditListingJobDescriptionForm.module.css
@@ -81,7 +81,3 @@
     /* margin-top: 100px; */
   }
 }
-
-.characterCount {
-  composes: marketplaceTinyFontStyles from global;
-}
